modules/my_sg/main.tf
#variable "my_ip" {}
resource "aws_security_group" "allow_ssh" {
    name = "Allow SSH"
    description = "Allow inbound SSH from my home IP address"

    ingress {
        description      = "SSH from my home IP"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = [var.my_ip]
    }
}
resource "aws_security_group" "allow_web" {
    name = "Allow HTTP"
    description = "Allow inbound HTTP access from my home IP address"

    ingress {
        description      = "HTTP from home IP"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = [var.my_ip]
    }
}
resource "aws_security_group" "allow_out_all" {
    name = "Allow all Out"
    description = "Allow outbound HTTP access from my instance"

    egress {
      from_port   = 0
      to_port     = 65535
      protocol    = "all"
      description = "Open internet"
      cidr_blocks = ["0.0.0.0/0"]
    }
}
